--- a/gittest/pom.xml
+++ b/gittest/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jre.level>1.8</jre.level>
+     <jdk.level>1.8</jdk.level>
   </properties>
 
   <dependencies>
@@ -23,3 +25,4 @@
     </dependency>
   </dependencies>
 </project>
+<build>
